--- a/style.css
+++ b/style.css
@@ -13,6 +13,11 @@ header {
     color: #fff;
 }
 
+p{
+    color: white;
+    font-size: large;
+}
+
 /* style the button */
 #startButton{
     display: flex;
@@ -44,6 +49,7 @@ h2{
     color: white;
 }
 
+
 #questionSection{
     display: flex;
     justify-content: center;
@@ -56,7 +62,7 @@ h2{
     margin-right: 30px;
     align-items: center;
     width: 100px;
-    height: 30px;
+    height: 100px;
     font-size: large;
     background-color: rgb(228, 161, 36);
     color: white;
@@ -70,7 +76,7 @@ h2{
     margin-right: 30px;
     align-items: center;
     width: 100px;
-    height: 30px;
+    height: 100px;
     font-size: large;
     background-color: rgb(228, 161, 36);
     color: white;
@@ -83,7 +89,7 @@ h2{
     margin-top: 30px;
     align-items: center;
     width: 100px;
-    height: 30px;
+    height: 100px;
     font-size: large;
     background-color: rgb(228, 161, 36);
     color: white;
