--- a/assets/style.css
+++ b/assets/style.css
@@ -1,101 +1,29 @@
-/* style the header and title*/
-
 body{
-    background-image: url(https://i.pinimg.com/originals/81/30/e8/8130e855c4861d60c6fc93fa51dbc321.jpg);
+    background-image: url("https://wonderfulengineering.com/wp-content/uploads/2014/04/code-wallpaper-24.jpg");
 }
 
 header {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 1%;
-    background-color: #13293d;
-    color: #fff;
-}
-
-p{
+    background-color: black;
     color: white;
-    font-size: large;
+    text-align: center;
+    height: auto;
 }
 
-/* style the button */
-#startButton{
-    display: flex;
-    margin-top: 30px;
-    align-items: center;
-    width: 100px;
-    height: 30px;
-    font-size: large;
-    background-color: rgb(228, 161, 36);
-    color: white;
-    border-radius: 5px;
-    box-shadow: 0 2px 0 2px rgb(44, 43, 43);
-    
-}
-/* style button section */
-
-#buttonSection{
-    display: flex;
-    justify-content: center;
-}
-
-
-
-/* style question section*/
-
-h2{
-    display: flex;
-    justify-content: center;
+#timerText{
+    text-align: center;
     color: white;
 }
 
-
-#questionSection{
-    display: flex;
-    justify-content: center;
+h3{
+    margin-top: 20px;
+    margin-bottom: 20px;
 }
 
-/* style answer buttons */
-#option1{
-    display: flex;
-    margin-top: 30px;
-    margin-right: 30px;
-    align-items: center;
-    width: 150px;
-    height: 150px;
-    font-size: large;
-    background-color: rgb(228, 161, 36);
-    color: white;
-    border-radius: 5px;
-    box-shadow: 0 2px 0 2px rgb(44, 43, 43);
+button{
+    margin-top: 20px;
+    margin-bottom: 10px;
 }
 
-#option2{
-    display: flex;
-    margin-top: 30px;
-    margin-right: 30px;
-    align-items: center;
-    width: 150px;
-    height: 150px;
-    font-size: large;
-    background-color: rgb(228, 161, 36);
-    color: white;
-    border-radius: 5px;
-    box-shadow: 0 2px 0 2px rgb(44, 43, 43);
+.card{
+    background-color: rgb(106, 214, 173);
 }
-
-#option3{
-    display: flex;
-    margin-top: 30px;
-    align-items: center;
-    width: 150px;
-    height: 150px;
-    font-size: large;
-    background-color: rgb(228, 161, 36);
-    color: white;
-    border-radius: 5px;
-    box-shadow: 0 2px 0 2px rgb(44, 43, 43);
-}
-
-
-/* make website media accessible */
